tests/neg/i9330.scala
val x = {
  () == "" // error
  implicit def foo[A: A] // error // error // error
}
